# zygisk-magisk-module

.github/workflows/: build.yml
module/: cleanup.sh  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
src/common/: consts.hpp
src/libzygisk/: CMakeLists.txt
src/libzygisk/libxdl/_xDL/: README.md  README.zh-CN.md  build.gradle
src/libzygisk/libxdl/_xDL/xdl_sample/src/main/: AndroidManifest.xml
src/libzygisk/src/: api.hpp  entry.cpp  hook.cpp  ipc_client.cpp  ipc_client.hpp  logging.hpp  module.cpp  module.hpp  zygisk.hpp
src/libzygisk/src/android/: native_bridge.h
src/zygiskd/: Cargo.toml
src/zygiskd/.cargo/: config.toml
src/zygiskd/src/: ipc.rs  main.rs  process.rs  server.rs
